--- a/.github/workflows/latest.yaml
+++ b/.github/workflows/latest.yaml
@@ -5,7 +5,7 @@ on:
     - master
 jobs:
   release:
-    name: Release
+    name: Latest
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
