--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,5 +17,6 @@ dockers:
   - goos: linux
     goarch: amd64
     dockerfile: goreleaser.dockerfile
+    skip_push: true
     image_templates:
       - 'gcr.io/kubernetes1-226021/cabpk-manager:latest'
