--- a/.github/workflows/latest.yaml
+++ b/.github/workflows/latest.yaml
@@ -1,17 +1,4 @@
 name: Latest
-inputs:
-  registry:
-    description: The base registry to tag the image with
-    required: false
-    default: gcr.io/k8s-staging-capi-kubeadm/manager
-  goreleaserVersion:
-    description: The version of goreleaser to installl
-    required: false
-    default: v0.116.0
-  goVersion:
-    description: The version of go to use
-    required: false
-    default: "1.12"
 on:
   push:
     branches:
@@ -21,18 +8,18 @@ jobs:
     name: Latest
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go ${{ inputs.goVersion }}
+      - name: Set up Go 1.12
         uses: actions/setup-go@v1
         with:
-          go-version: ${{ inputs.goVersion }}
+          go-version: 1.12
         id: go
 
       - name: Check out code
         uses: actions/checkout@v1
 
-      - name: Install goreleaser ${{ inputs.goreleaserVersion }}
+      - name: Install goreleaser
         run: |
-          curl -sLO https://github.com/goreleaser/goreleaser/releases/download/${{ inputs.goreleaserVersion }}/goreleaser_amd64.deb
+          curl -sLO https://github.com/goreleaser/goreleaser/releases/download/v0.116.0/goreleaser_amd64.deb
           sudo dpkg -i goreleaser_amd64.deb
           rm goreleaser_amd64.deb
 
@@ -50,10 +37,8 @@ jobs:
         run: goreleaser release --snapshot --skip-publish
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-          REGISTRY: ${{ inputs.registry }}
 
       - name: push images
         uses: actions/gcloud/cli@master
         with:
-          args: "docker -- push ${{ inputs.registry}}/cabpk-manager"
-          registry: gcr.io/kubernetes1-226021
+          args: "docker -- push gcr.io/kubernetes1-226021/cabpk-manager"
