--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,4 +19,4 @@ dockers:
     dockerfile: goreleaser.dockerfile
     skip_push: true
     image_templates:
-      - '{{ .Env.REGISTRY }}/cabpk-manager:latest'
+      - 'gcr.io/kubernetes1-226021/cabpk-manager:latest'
