--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,10 +31,17 @@ jobs:
       with:
         args: "auth configure-docker"
 
-    - name: Runs goreleaser
+    - name: Runs goreleaser (only for github release)
       run: goreleaser release
       env:
         GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+
+    - name: docker build
+      uses: actions/docker/cli@master
+      run: build -t gcr.io/kubernetes1-226021/cabpk-manager
+
+    - name: docker tag
+      uses: actions/docker/tag@master
 
     - name: push images
       uses: actions/gcloud/cli@master
