--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,12 @@
+builds:
+- id: noop
+  goos:
+  - linux
+  goarch:
+  - amd64
+  ignore:
+  - goos: linux
+    goarch: amd64
 changelog:
   sort: asc
   filters:
